[project]
name = "discord-search-api-scraper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ilirski", email = "24876805+Ilirski@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/discord_search_api_scraper"]
